opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/immuable"
dev-repo: "git+https://github.com/robur-coop/immuable.git"
bug-reports: "https://github.com/robur-coop/immuable/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "mirage-crypto-rng-mkernel"
  "dns"
  "hxd"
  "mnet"
  "mnet-tls"
  "mnet-cli"
  "cmdliner"
  "re"
  "mfat"
  "ca-certs-nss"
  "mirage-ptime"
  "mkernel"
  "dns-resolver"
  "dns-server"
]
build: [
  [make "all"]
]
synopsis: "An unikernel which serve HTTP contents"
pin-depends: [
  [ "zarith.dev" "git+https://github.com/mirage/Zarith.git#df8969d9bb95cffca13e31a615189ab27ada0684" ]
  [ "mfat.dev" "git+https://github.com/robur-coop/mfat.git#5d6aa2dd6067133c76b0f8f8b8cca4faf4eb9104" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#c639c4dbe594d2092ec4c80786b8d5ea486b600f" ]
  [ "mnet.dev" "git+https://github.com/robur-coop/mnet.git#5f98dc8e8166cc047ef0d59fccd26ec7fb02eff6" ]
  [ "mnet-tls.dev" "git+https://github.com/robur-coop/mnet.git#5f98dc8e8166cc047ef0d59fccd26ec7fb02eff6" ]
  [ "mnet-dns.dev" "git+https://github.com/robur-coop/mnet.git#5f98dc8e8166cc047ef0d59fccd26ec7fb02eff6" ]
  [ "mnet-happy-eyeballs.dev" "git+https://github.com/robur-coop/mnet.git#5f98dc8e8166cc047ef0d59fccd26ec7fb02eff6" ]
  [ "mnet-cli.dev" "git+https://github.com/robur-coop/mnet.git#5f98dc8e8166cc047ef0d59fccd26ec7fb02eff6" ]
]
