(executable
 (name main)
 (modules main resolver)
 (link_flags :standard -cclib "-z solo5-abi=hvt")
 (libraries
  hxd.core
  hxd.string
  ca-certs-nss
  dns-server
  dns-resolver
  mkernel
  mnet
  mnet.tls
  mirage-crypto-rng-mkernel
  cmdliner
  logs.cli
  logs.fmt
  fmt.cli
  re
  gmp)
 (foreign_stubs
  (language c)
  (names manifest)))

(rule
 (targets manifest.c)
 (enabled_if
  (= %{context_name} "default"))
 (action
  (write-file manifest.c "")))

(rule
 (targets manifest.c)
 (deps manifest.json)
 (enabled_if
  (= %{context_name} "solo5"))
 (action
  (run solo5-elftool gen-manifest manifest.json manifest.c)))

(rule
 (targets manifest.json)
 (enabled_if
  (= %{context_name} "solo5"))
 (action
  (with-stdout-to
   manifest.json
   (run %{exe:main.exe} --ipv4=0.0.0.0/24))))

(vendored_dirs vendors)
