opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/immuable"
dev-repo: "git+https://github.com/robur-coop/immuable.git"
bug-reports: "https://github.com/robur-coop/immuable/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "mirage-crypto-rng-mkernel"
  "dns"
  "hxd"
  "mnet"
  "mnet-tls"
  "mnet-cli"
  "cmdliner"
  "re"
  "ca-certs-nss"
  "mirage-ptime"
  "mkernel"
  "dns-resolver"
  "dns-server"
]
build: [
  [make "all"]
]
synopsis: "An unikernel which serve HTTP contents"
pin-depends: [
  [ "zarith.dev" "git+https://github.com/mirage/Zarith.git#df8969d9bb95cffca13e31a615189ab27ada0684" ]
]
